--- a/css/redux.css
+++ b/css/redux.css
@@ -24,9 +24,10 @@ html, body {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    /*! align-items: center; */
+    min-height: 92vh;
 }
 /* Status Bar & Content */
+
 .statusbar {
     background-image: linear-gradient(#4f6a8a, #435b7a);
     display: flex;
@@ -54,6 +55,13 @@ html, body {
 #battery {
     right: 5px;
     position: absolute;
+}
+
+.wrapper {
+    border: 1px solid #9ea2a8;
+    border-radius: 15px;
+    background: white;
+    margin: 14px;
 }
 /* Banner & Content */
 .banner {
@@ -98,11 +106,7 @@ html, body {
     list-style: none;
     margin: 14px 14px 14px 14px;
     padding: 0;
-    border: 1px solid #9ea2a8;
-    border-radius: 15px;
-    background: white;
     user-select: none;
-    flex-grow: 1;
 }
 .list li {
     display: flex;
@@ -151,7 +155,7 @@ html, body {
     position: absolute;
     right: 20px;
 }
-p {
+.content > p {
     display: flex;
     position: relative;
     justify-content: center;
@@ -252,18 +256,9 @@ Button.settings {
     height: 4.05em;
     cursor: pointer;
     border-radius: 10px;
-    background: white;
     justify-content: center;
-    border: 1px solid #9ea2a8;
     margin-top: 14px;
     margin-bottom: 14px;
-}
-@media screen and (min-width: 500px) {
-    .content > * {
-        width: 450px;
-        margin-left: auto;
-        margin-right: auto;
-    }
 }
 
 .list > h2:last-child {
@@ -283,7 +278,7 @@ Button.settings {
     color: #3b577d;
     margin-top: 0;
     margin-bottom: 0;
-    font-size: 1.8em;
+    font-size: 1.5em;
     text-shadow: 2px 1.5px 0 #e2e4f0b5;
 }
 
@@ -297,4 +292,58 @@ Button.settings {
     opacity: 30%;
     border-radius: 10px;
     clip-path: ellipse(50px 40px at 50% -35%);
+}
+
+.left-image-right-content {
+    display: flex;
+    padding: 10px;
+}
+
+
+.left-image-right-content > img {
+    width: 125px;
+    height: 125px;
+    border-radius: 10px;
+}
+
+.left-image-right-content > .info {
+    display: flex;
+    padding: 0 10px;
+    flex-direction: column;
+}
+
+.left-image-right-content > .info > h2 {
+    margin: 0;
+    font-size: 1.5em;
+    padding-bottom: 5px;
+    padding-top: 5px;
+}
+
+.left-image-right-content > .info > h4 {
+    margin: 0;
+    padding-top: 4px;
+    font-size: 1.1em;
+    font-weight: normal;
+    color: #6c6c6c;
+}
+
+.wrapper > p {
+    position: relative;
+    justify-content: center;
+    color: black;
+    line-height: 20px;
+    margin: 14px;
+    font-weight: normal;
+    font-size: 1.0em;
+}
+
+@media screen and (min-width: 500px) {
+    .content > * {
+        width: 450px !important;
+        margin-left: auto !important;
+        margin-right: auto !important;
+    }
+    .left-image-right-content > .info {
+        padding: 10px;
+    }
 }
