--- a/css/redux.css
+++ b/css/redux.css
@@ -17,6 +17,7 @@ html, body {
     position: relative;
     display: flex;
     flex-direction: column;
+    overflow-x: clip;
 }
 header {
     position: fixed;
@@ -32,6 +33,8 @@ header {
     flex-direction: column;
     min-height: 92vh;
     margin-top: 90px;
+    transition: margin-left 0.5s;
+    overflow-y: hidden;
 }
 /* Status Bar & Content */
 
@@ -89,6 +92,9 @@ header {
     height: 3.5em;
     align-items: center;
 }
+.banner > div {
+    transition: margin-left 0.5s;
+}
 .banner > h2 {
     margin: 0;
 }
@@ -98,19 +104,20 @@ header {
     left: 0;
 }
 .back-nav {
-    /*! display: none; */
     position: absolute;
-    left: 1em;
+    left: 0.5em;
     height: 3em;
-    margin-top: 0.75em;
+    margin-top: 0.9em;
     background-image: linear-gradient(#9ea9c3, #3b577d);
     color: #fafefc;
     text-shadow: 0 -2.25px 0 rgba(0, 0, 0, 0.3);
     border: none;
-    padding: 0 1em 0 1.5em;
+    padding: 0 1em 0 1.75em;
     border-radius: 7px;
     box-shadow: inset 0 0 3px #323c48;
     clip-path: polygon(25% 0px, 100% 0px, 100% 100%, 25% 100%, 0px 50.00%);
+    width: max-content;
+    cursor: pointer;
 }
 /* List Types */
 .list {
@@ -128,13 +135,15 @@ header {
     height: 4.05em;
 }
 .list li:first-child {
-    border-radius: 10px 10px 0 0;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 .list li:last-child {
     border: none;
-    border-radius: 0 0 10px 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px
 }
-.arrow-list > li:after {
+.arrow-list > li:after, .wrapper button:after {
     border: solid #7a7a7a;
     border-width: 0 4px 4px 0;
     display: inline-block;
@@ -151,11 +160,11 @@ header {
     border-radius: 10px;
     margin-left: 10px;
 }
-.list li:hover {
+.list li:hover, .wrapper button:hover {
     background-image: linear-gradient(#3088cd, #0164e9);
     color: white;
 }
-.arrow-list > li:hover:after {
+.arrow-list > li:hover:after, .wrapper button:hover:after {
     border: solid white;
     border-width: 0 4px 4px 0;
     display: inline-block;
@@ -175,82 +184,6 @@ header {
     margin: 5px 14px 5px 14px;
     font-weight: bold;
     user-select: none;
-}
-/* On/Off Toggle */
-:root input[type="checkbox"] {
-    position : absolute;
-    opacity : 0;
-}
-:root input[type="checkbox"].ios-switch + div {
-    display : inline-block;
-    vertical-align : middle;
-    width : 3em;
-    height : 1em;
-    border : rgba(0, 0, 0, 0.3) solid 1px;
-    border-radius : 999px;
-    margin : 0 0.5em;
-    background : white;
-    background-image : linear-gradient(rgba(0, 0, 0, 0.1), transparent), linear-gradient(90deg, hsl(210, 90%, 60%) 50%, transparent 50%);
-    background-size : 200% 100%;
-    background-position : 100% 0;
-    background-origin : border-box;
-    background-clip : border-box;
-    overflow : hidden;
-    transition-duration : 0.4s;
-    transition-property : padding, width, background-position, text-indent;
-    box-shadow : 0 0.1em 0.1em rgba(0, 0, 0, 0.2) inset, 0 0.45em 0 0.1em rgba(0, 0, 0, 0.05) inset;
-    font-size : 150%;
-}
-:root input[type="checkbox"].ios-switch:checked + div {
-    padding-left : 2em;
-    width : 1em;
-    background-position : 0 0;
-}
-:root input[type="checkbox"].ios-switch + div:before {
-    content : 'On';
-    float : left;
-    width : 1.65em;
-    height : 1.65em;
-    margin : -0.1em;
-    border : rgba(0, 0, 0, 0.35) solid 1px;
-    border-radius : inherit;
-    background : white;
-    background-image : linear-gradient(rgba(0, 0, 0, 0.2), transparent);
-    box-shadow : 0 0.1em 0.1em 0.1em hsla(0, 0%, 100%, 0.8) inset, 0 0 0.5em rgba(0, 0, 0, 0.3);
-    color : white;
-    text-shadow : 0 -1px 1px rgba(0, 0, 0, 0.3);
-    text-indent : -2.5em;
-}
-:root input[type="checkbox"].ios-switch:active + div:before {
-    background-color : #eee;
-}
-:root input[type="checkbox"].ios-switch + div:before, :root input[type="checkbox"].ios-switch + div:after {
-    font : bold 60%/1.9 sans-serif;
-    text-transform : uppercase;
-}
-:root input[type="checkbox"].ios-switch + div:after {
-    content : 'Off';
-    float : left;
-    text-indent : 0.5em;
-    color : rgba(0, 0, 0, 0.45);
-    text-shadow : none;
-}
-label {
-    position : relative;
-    display : block;
-    padding : 0.8em;
-    border : silver solid 1px;
-    border-top-width : 0;
-    background : white;
-    font : bold 110% sans-serif;
-}
-label:first-of-type {
-    border-top-width : 1px;
-    border-radius : 0.6em 0.6em 0 0;
-}
-label:last-of-type {
-    border-radius : 0 0 0.6em 0.6em;
-    box-shadow : 0 1px hsla(0, 0%, 100%, 0.8);
 }
 /* Inner content size fix */
 .content > * {
@@ -281,7 +214,8 @@ Button.settings {
     margin-left: auto;
     margin-right: 45px;
 }
-.list h2 {
+.list h3 {
+    padding-left: 1em;
 }
 
 .list > li > a {
@@ -324,7 +258,7 @@ Button.settings {
 .left-image-right-content > img {
     width: 125px;
     height: 125px;
-    border-radius: 10px;
+    border-radius: 20px;
     user-select: none;
 }
 
@@ -376,4 +310,34 @@ Button.settings {
     .left-image-right-content > .info > h4 {
         padding-top: 4px;
     }
+}
+
+.left {
+    position: absolute;
+    margin-left: -200vw;
+}
+
+.right {
+    position: absolute;
+    margin-left: 200vw;
+}
+
+.wrapper button {
+    position: relative;
+    height: 3em;
+    width: 100%;
+    background: none;
+    border: none;
+    border-top: 2px solid #d5d5d5;
+    font-weight: bold;
+    font-size: 1.2em;
+    display: flex;
+    align-items: center;
+    padding-left: 1em;
+    cursor: pointer;
+    border-radius: 0 0 10px 10px;
+}
+
+.wrapper > a {
+    text-decoration: none;
 }
